--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Gejo.github.com by gejo</title>
+    <title>Joy Never Ends</title>
   </head>
 
   <body>
