--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         <h1>Joy Never Ends</h1>
-        <p>personal blog</p>
+        <p>Joy's blog</p>
         <p class="view"><a href="https://github.com/gejo">View the Project on GitHub <small>gejo</small></a></p>
         <ul>
           <li class="single"><a href="https://github.com/gejo/gejo.github.com">View On <strong>GitHub</strong></a></li>
